missing abstract and title page

--- a/report/master.tex
+++ b/report/master.tex
@@ -36,6 +36,7 @@
 \addtocontents{toc}{\bigskip}%laver ekstra mellemrum
 
 \cleardoublepage
+\part{Appendices}
 \begin{appendices}
 \chapter{API Documentation}\label{app:api}
   \includepdf[pages={1}]{img/appendix_api}
