DONE DONE DONNNNE

--- a/report/tex/abstract.tex
+++ b/report/tex/abstract.tex
@@ -1,1 +1,5 @@
-This is where the abstract will go.
+We describe the design and implmentation of a central server application for the GIRAF system with a database, an API for communication and synchronization between the central database and a local counterpart on an Android device. This is done in the context of a multiproject consisting of 8 groups, all working on various aspects of the GIRAF system. We end up with a working implementation and describe future work and tips for future students working on top of this project.
+
+\vspace{10px}
+
+Vi beskriver design og implementation af en cetral server applikation til GIRAF systemet, med en database, et API til kommunikation og synkronisering mellem den centrale database og en lokal version på en Android enhed. Dette er gjort i forbindelse med et multiprojekt bestående af 8 grupper som alle arbejder på forskellige aspekter af GIRAF systemet. Vi ender med en fungerende implementation og beskriver fremtidigt arbejde og giver tips til studerende som eventuelt måtte bygge videre på dette projekt.
