--- a/report/tex/titlepage.tex
+++ b/report/tex/titlepage.tex
@@ -60,10 +60,10 @@ Simon Jensen\\
 \end{description}
 }
 \begin{description}
-\item { Circulation: 2 }
-\item { Number of pages: some } 
-\item { Number of Appendices: maybe} 
-\item { Finished } some date 2013
+\item { Circulation: 6 }
+\item { Number of pages: 103 } 
+\item { Number of Appendices: 3} 
+\item { Finished } 4th of June 2013
 \end{description}
 \vfill } &
 \parbox{7cm}{
