final small correction

--- a/report/tex/manual/install_instructions.tex
+++ b/report/tex/manual/install_instructions.tex
@@ -63,4 +63,4 @@ The report content is freely available, but publication (with source), only with
 
 GIRAF Database's source code is released under the GPLv3 \cite{GNUlicense} open source license. This means that you are free to inspect the source code at any time or contribute to the project yourself.
 
-\subsection*{Online Availability} The installation guide and the latest version of the code can also be found online \cite{install}.
+\subsection*{Online Availability} The installation guide and the latest, commented version of the code can also be found online \cite{install}.
